RM-9395 Remove no longer needed pinning for transitive dependencies.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -61,7 +61,7 @@
       </ItemGroup>
       <ItemGroup>
         <!-- Transitive pinned packages - check if they are still needed on package upgrades -->
-        <PackageVersion Include="System.Formats.Asn1" Version="8.0.1" />
+        <PackageVersion Include="System.Formats.Asn1" Version="8.0.1" Condition="'$(IsPackable)' == 'false'" />
       </ItemGroup>
     </When>
     <When Condition="$(TargetFramework.StartsWith('net9.0'))">
@@ -77,7 +77,7 @@
       </ItemGroup>
       <ItemGroup>
         <!-- Transitive pinned packages - check if they are still needed on package upgrades -->
-        <PackageVersion Include="System.Formats.Asn1" Version="9.0.0-rc.2.24473.5" />
+        <PackageVersion Include="System.Formats.Asn1" Version="9.0.0-rc.2.24473.5" Condition="'$(IsPackable)' == 'false'" />
       </ItemGroup>
     </When>
   </Choose>
