--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,7 +17,6 @@
     <PackageVersion Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageVersion Include="log4net" Version="3.0.2" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
     <PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.11.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
@@ -46,6 +45,19 @@
     <PackageVersion Include="Selenium.Support" Version="4.21.0" />
     <PackageVersion Include="Selenium.WebDriver" Version="4.21.0" />
     <PackageVersion Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+  <ItemGroup>
+    <!-- Roslyn Analzyers depend on the installed version of MSBuild and .NET SDK.
+         It must not be upgraded higher than the version installed on all build environment.
+
+         List of NuGet package versions: https://github.com/dotnet/roslyn/blob/main/docs/wiki/NuGet-packages.md
+         List of MSBuild and .NET SDK versions: https://learn.microsoft.com/en-us/dotnet/core/porting/versioning-sdk-msbuild-vs#lifecycle
+
+         4.10.0: MSBuild 17.10 / .NET SDK 8.0.3xx
+         4.11.0: MSBuild 17.11 / .NET SDK 8.0.4xx
+         4.12.0: MSBuild 17.12 / .NET SDK 9.0.1xx
+    -->
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFramework.StartsWith('net8.0'))">
