RM-9407 Add test for applied EnableNullLoggerFactoryAsFallbackInBootstrapServiceConfigurationAttribute

--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -14,6 +14,7 @@
     <EmbeddedResource Include="Utilities\TestData\WriteEmbeddedStringResourceToFileTestData.txt" />
     <TestAssembly Include="Reflection\TypeDiscovery\TestAssemblies\**\*.*" />
     <TestAssembly Include="Reflection\TypeDiscovery\AssemblyFinding\TestAssemblies\AssemblyFinderTest\RemotionCoreReferencingAssembly\AssemblyInfo.cs" />
+    <TestAssembly Include="ServiceLocation\BootstrapServiceConfigurationTests\TestAssemblies\**\*.*" />
     <Compile Remove="@(TestAssembly)" />
     <Content Include="@(TestAssembly)" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
