--- a/Remotion/Web/Development.WebTesting.ControlObjects/Web.Development.WebTesting.ControlObjects.csproj
+++ b/Remotion/Web/Development.WebTesting.ControlObjects/Web.Development.WebTesting.ControlObjects.csproj
@@ -10,6 +10,7 @@
     <AssemblyName>Remotion.Web.Development.WebTesting.ControlObjects</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <SignAssembly>False</SignAssembly>
+    <TargetFrameworks>net8.0-windows</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Contracts.DiagnosticMetadata\Web.Contracts.DiagnosticMetadata.csproj" />
