--- a/Remotion/ObjectBinding/Sample/ObjectBinding.Sample.csproj
+++ b/Remotion/ObjectBinding/Sample/ObjectBinding.Sample.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>Remotion.ObjectBinding.Sample</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <Nullable>disable</Nullable>
+    <TargetFrameworks>net8.0-windows</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
