--- a/Remotion/Web/Security/Web.Security.csproj
+++ b/Remotion/Web/Security/Web.Security.csproj
@@ -10,6 +10,7 @@
     <Description>Internal: Integrates Remotion.Security and Remotion.Web assemblies.</Description>
     <AssemblyName>Remotion.Web.Security</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
+    <TargetFrameworks>net8.0-windows</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
