RM-9279 Add packages and update required dependencies

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -45,6 +45,7 @@
     <PackageVersion Include="Selenium.Support" Version="4.25.0" />
     <PackageVersion Include="Selenium.WebDriver" Version="4.25.0" />
     <PackageVersion Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageVersion Include="CycloneDX" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
     <!-- Roslyn Analzyers depend on the installed version of MSBuild and .NET SDK.
@@ -57,7 +58,7 @@
          4.11.0: MSBuild 17.11 / .NET SDK 8.0.4xx
          4.12.0: MSBuild 17.12 / .NET SDK 9.0.1xx
     -->
-    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.10.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFramework.StartsWith('net8.0'))">
